--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,11 +25,16 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
     
+    - name: Convert to lowercase
+      id: lowercase
+      run: |
+        echo "OWNER=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+    
     - name: Build and push
       uses: docker/build-push-action@v5
       with:
         context: .
         push: true
         tags: |
-          ghcr.io/${{ github.repository_owner | lower }}/storybox:latest
-          ghcr.io/${{ github.repository_owner | lower }}/storybox:${{ github.sha }}
+          ghcr.io/${{ steps.lowercase.outputs.OWNER }}/storybox:latest
+          ghcr.io/${{ steps.lowercase.outputs.OWNER }}/storybox:${{ github.sha }}
